force-app/main/default/objects/csfb__Conga_Email_Staging__c/fields/csfb__WhatId__c.field-meta.xml
<CustomField>
    <fullName>csfb__WhatId__c</fullName>
    <label>WhatId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>