force-app/main/default/objects/csfb__Conga_Email_Staging__c/fields/csfb__WhoId__c.field-meta.xml
<CustomField>
    <fullName>csfb__WhoId__c</fullName>
    <label>WhoId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>